# bambu3mf

./: .gitignore  README.md  pyproject.toml
src/bambu3mf/: __init__.py  config_writer.py  plate.py  project.py  stl_loader.py
tests/: MANUAL_TEST_PLAN.md  test_add_stl.py  test_config_writer.py  test_e2e.py  test_plate.py  test_project.py  test_stl_loader.py  test_version.py
tests/fixtures/: cube.stl
