[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bambu3mf"
version = "0.1.0"
description = "Python library for creating Bambu Studio 3MF files"
requires-python = ">=3.10"
dependencies = ["lib3mf"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
